styles.css
* {
	box-sizing: border-box;
}

body {
	background-color: beige;
	height: 100%;
}

main {
	margin: 0 auto;
	width: 60%;
	height: 100%;
	font-family: 'Open Sans', sans serif;
	font-size: large;
}

.banner {
	background-color: beige;
	padding: 15px;
	padding-top: 30px;
}

.content {
	margin-bottom: 0px;
	padding-left: 30px;
	padding-right: 30px;
	padding-top: 25px;
	padding-bottom: 50px;
	background-color: white;
	height: 100%;
}

.subtitle {
	padding: 5px;
	font-size: 1.5em;
	font-weight: bold;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
}

.input-label {
	margin-right: 10px;
	display: flex;
	flex-direction: row;
}

.input-line {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	row-gap: 7px;
}

.amt-input {
	margin-bottom: 25px;
}

#people-amt {
	margin-right: 5px;
	max-height: 30px;
	max-width: 100px;
}

#people-amt:invalid {
	color: rgb(214, 15, 15);
}

.radio-unit {
	display: inline-flex;
}

.name-mode-choice {
	margin-right: 15px;
	margin-left: 5px;
} 

.name-input {
	margin-top: 25px;
}

.names {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	row-gap: 7px;
	margin-top: 5px;
	max-width: 400px;
}

.shape-input {
	margin-top: 40px;
	margin-bottom: 30px;
}

#shape-choice {
	max-width: 100%;
	max-height: 30px;
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	font-size: medium;
}

.shape-option {
	overflow-x: hidden;
	text-overflow: ellipsis;
}

#run {
	display: flex;
	font-size: medium;
}

#table-grid {
	display: grid;
	grid-template-columns: repeat(var(--width), 1fr); /* 1fr = one edge chair, 2fr = one top / bottom chair */
	grid-template-rows: 1fr 1fr;
	column-gap: 0px;
	row-gap: 0px;
	min-height: 160px;
	max-height: 250px;
	margin-top: 40px;
}

.scroll-container {
	overflow-x: auto;
	overflow-y: hidden;
	width: 100%;
}

.left-chair {
	grid-row: 1 / span 2;
	align-items: center;
	justify-content: left;
	padding-left: 10px;
	padding-right: 5px;
}

.right-chair {
	grid-row: 1 / span 2;
	align-items: center;
	justify-content: right;
	padding-right: 10px;
	padding-left: 5px;
}

.top-chair {
	grid-column: span 2;
	grid-row: 1;
	align-items: flex-start;
	justify-content: center;
	padding-top: 10px;
	padding-bottom: 5px;
	padding-left: 5px;
	padding-right: 5px;
}

.bottom-chair {
	grid-column: span 2;
	grid-row: 2;
	align-items: flex-end;
	justify-content: center;
	padding-bottom: 10px;
	padding-top: 5px;
	padding-left: 5px;
	padding-right: 5px;
}

.chair {
	display: flex;
	background-color: rgb(169, 120, 78);
	margin: 0px;
}

.error {
	color: rgb(214, 15, 15);
	display: block;
	margin-top: 15px;
}

.footer {
	width: 100%;
	height: 50px;
	background-color: beige;
}

